--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "build-emu": "make",
         "dev": "electron . --enable-logging",
         "prebuild": "npm run build-emu",
-        "build": "electron-builder",
-        "build:mac": "npm run prebuild && electron-builder --mac",
+        "build": "electron-builder --dir",
+        "build:mac": "npm run prebuild && electron-builder --mac --dir",
         "build:win": "npm run prebuild && electron-builder --win",
         "build:linux": "npm run prebuild && electron-builder --linux",
         "dist": "npm run build",
